crates/swc_css_parser/tests/errors/rome/invalid/fit-content/invalid-call/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/rome/invalid/fit-content/invalid-call/input.css:3:1
  |
3 | }
  | ^

